Fix line spacing for home title

--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -31,7 +31,7 @@
   color: white;
   font-size: 6rem;
   font-weight: 400;
-  line-height: 0.7;
+  line-height: 0.8;
 }
 
 .hero-subtitle {
